PN-404: Add ability to record My notes to each matching pair Prevent jumping on top of table when clicking on notes icon Center status td inner elements

--- a/matching-notification-resources/src/main/resources/resources/uicomponents/matchingNotification/matchesTable.css
+++ b/matching-notification-resources/src/main/resources/resources/uicomponents/matchingNotification/matchesTable.css
@@ -276,6 +276,7 @@ a.button.comment, a.button.notes {
 td.status-column {
   white-space: nowrap;
   padding-right: 0px;
+  text-align: center;
 }
 select.status {
   padding: .3em 1px .3em 1px;
